--- a/experiment/simulation/css/style.css
+++ b/experiment/simulation/css/style.css
@@ -1,3 +1,9 @@
+#exp_container {
+    position: relative;
+    height: 1000px;
+    width: 100%;
+}
+
 #con {
   position: absolute;
   width: 500px;
