--- a/experiment/simulation/css/main.css
+++ b/experiment/simulation/css/main.css
@@ -1,1 +1,24 @@
-/* You CSS goes in here */
+.page {
+	overflow-x: scroll;
+	overflow-y: scroll;
+}
+
+.main {
+	width: 85%;
+	height: 85%;
+	background-color: #A4C652;
+}
+
+.action-button {
+	color: white;
+	text-align: center;
+	background-color: #288EC8;
+	border-radius: 16px;
+	padding: 10px 20px;
+	border: none;
+	font-size: 120%;
+}
+
+.action-button:hover {
+	background-color: #A9A9A9;
+}
